test/compile_fail/fixtures/placeholder.rs
// Placeholder fixture — passes compilation.
// Replace with actual compile-fail fixtures in Phase 5.
fn main() {}
